commit to be able to do a revert

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,6 @@
 html {
     text-align: center;
+    margin: 4px;
 }
 
 img {
@@ -7,18 +8,8 @@ img {
     margin: 0 auto;
 }
 
-#pushFormToDB {
+#pushFormToDB, #pushRoutesToDB, #mapRoute {
     display: none;
-}
-
-#pushRoutesToDB {
-    display: none;
-    /*float: right;*/
-}
-
-#mapRoute {
-    display: none;
-    /*float: left;*/
 }
 
 #container {
