--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,5 @@
 html {
     text-align: center;
-    margin: 4px;
 }
 
 img {
@@ -8,8 +7,18 @@ img {
     margin: 0 auto;
 }
 
-#pushFormToDB, #pushRoutesToDB, #mapRoute {
+#pushFormToDB {
     display: none;
+}
+
+#pushRoutesToDB {
+    display: none;
+    /*float: right;*/
+}
+
+#mapRoute {
+    display: none;
+    /*float: left;*/
 }
 
 #container {
