--- a/views/splash.ejs
+++ b/views/splash.ejs
@@ -16,6 +16,18 @@ Welcome, <%- (currentUser.name) %>!
 </div>
   <div id="results"></div>
 </div>
+<div id="sliderSlides">
+<div>
+  1
+</div>
+<div>
+  2
+</div>
+<div>
+  3
+</div>
+</div>
+
 
 <script src="/js/app.js" type="text/javascript" charset="utf-8"></script>
 <script async defer
