--- a/views/splash.ejs
+++ b/views/splash.ejs
@@ -16,16 +16,7 @@ Welcome, <%- (currentUser.name) %>!
 </div>
   <div id="results"></div>
 </div>
-<div id="sliderSlides">
-<div>
-  1
-</div>
-<div>
-  2
-</div>
-<div>
-  3
-</div>
+<div class="autoplay">
 </div>
 
 
