--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,12 +16,12 @@
     <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
   </head>
   <body>
-    <a href="/">Home</a>
+    <a href="/">Map A Run</a>
     <a href="/auth/signup">Signup</a>
     <a href="/auth/login">Login</a>
     <a href="/auth/logout">Logout</a>
-    <a href="/profile">Profile</a>
-    <a href="/runMaps/showAllRuns">Show All Runs</a>
+    <a href="/profile">Favorite Runs</a>
+    <a href="/runMaps/showAllRuns">Show All User Created Runs</a>
 
     <div class="container">
       <% include partials/alerts %>
