--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-    <title>Authentication</title>
+    <title>Run Vision</title>
     <!-- Latest compiled and minified CSS & JS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
@@ -23,9 +23,10 @@
     <a href="/profile">Favorite Runs</a>
     <a href="/runMaps/showAllRuns">Show All User Created Runs</a>
 
+    <h1>Run Vision</h1>
+
     <div class="container">
       <% include partials/alerts %>
-      <h1>Run App</h1>
       <%- body %>
     </div>
 
