--- a/views/showRuns.ejs
+++ b/views/showRuns.ejs
@@ -1,11 +1,12 @@
-<h2><%= run.name %></h2>
+<div class="container">
+  <h2><%= run.name %></h2>
 
 <button id="favoriteId">Save To Favorites</button>
 <div class="autoplay">
 </div>
 <div id="map">
 </div>
-
+</div>
 <script>
 var map;
 
