--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,39 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-    <title>Run Vision</title>
-    <!-- Latest compiled and minified CSS & JS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/css/styles.css">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+<title>Run Vision</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="/css/styles.css">
+<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
+<script src="//code.jquery.com/jquery.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+</head>
+<body>
+    <nav class="navbar navbar-default navbar-static-top">
+        <div class="container">
+            <% if (currentUser) { %>
+            <a href="/">Map A Run</a>
+            <% } %>
 
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
+            <% if (!currentUser) { %>
+            <div id="splashPop">
+                <a href="/auth/signup">Signup</a>
+                <a href="/auth/login">Login</a>
+            </div>
+            <% } %>
 
-    <script src="//code.jquery.com/jquery.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
-  </head>
-  <body>
-    <a href="/">Map A Run</a>
-    <a href="/auth/signup">Signup</a>
-    <a href="/auth/login">Login</a>
-    <a href="/auth/logout">Logout</a>
-    <a href="/profile">Favorite Runs</a>
-    <a href="/runMaps/showAllRuns">Show All User Created Runs</a>
-
-    <h1>Run Vision</h1>
-
+            <% if (currentUser) { %>
+            <a href="/auth/logout">Logout</a>
+            <a href="/profile">Favorite Runs</a>
+            <a href="/runMaps/showAllRuns">All Runs</a>
+            <% } %>
+        </div>
+    </nav>
+    <% if (!currentUser) { %>
+        <h1>Run Vision</h1>
+    <% } %>
     <div class="container">
       <% include partials/alerts %>
       <%- body %>
     </div>
-
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-<!--     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCHKEYVYqaOgwp_M3GURu30QKreYxq61bQ&callback=initMap">
-    </script> -->
     <script src="/js/app.js" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
