--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -2,17 +2,17 @@
 
   <div class="form-group">
     <label for="authEmail">Email</label>
-    <input id="authEmail" class="form-control" type="email" name="email">
+    <input id="authEmail" class="form-control col-md-4" type="email" name="email">
   </div>
 
   <div class="form-group">
     <label for="authName">Name</label>
-    <input id="authName" class="form-control" type="text" name="name">
+    <input id="authName" class="form-control col-md-4" type="text" name="name">
   </div>
 
   <div class="form-group">
     <label for="authPassword">Password</label>
-    <input id="authPassword" class="form-control" type="password" name="password">
+    <input id="authPassword" class="form-control col-md-4" type="password" name="password">
   </div>
 
   <input class="btn btn-primary" type="submit">
