added a symbol on the front page

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -51,11 +51,11 @@
 
 <% if (!currentUser) { %>
   <div id='container'>
-      <h1>Run Vision</h1>
+    <h1>Run Vision</h1>
   </div>
-
-  <div id='map-canvas'></div>
-
+  <div>
+    <span id="symbol">&#182;</span>
+  </div>
 <% } %>
 
 <div class="container">
