--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -54,7 +54,7 @@
     <h1>Run Vision</h1>
   </div>
   <div>
-    <span id="symbol">&#182;</span>
+    <img class="text-center" src="/img/running.png">
   </div>
 <% } %>
 
